<resources>
    <string name="app_name">HomeBudget</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main2">HomeBudget</string>
    <string name="title_shopping_lists">Shopping Lists</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_incomes">Incomes</string>
    <string name="title_reports">Reports</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_money">Total money:</string>
    <string name="no_money">0.0000</string>
    <string name="choose_add_budget">Choose/Add budget:</string>
    <string name="transaction_description">Transaction description</string>
    <string name="amount">Amount</string>
    <string name="choose_add_category">Choose/Add category:</string>
    <string name="choose_date">Choose date:</string>
    <string name="empty_view_message">You need to insert data in blank fields!</string>
    <string name="save">Save</string>
    <string name="from">From:</string>
    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>
    <string name="all">All</string>
    <string name="to">To:</string>
    <string name="no_transactions_message">There are no transactions in chosen time period!</string>
    <string name="report">Report</string>
    <string name="share_budget">Share budget</string>
</resources>
